--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-app",
-  "description": "Nodeapp for CICD test",
+  "description": "Nodeapp for CICD demo project",
   "version": "0.0.1",
   "private": true,
   "dependencies": {
